--- a/css/scss/pages/_template.scss
+++ b/css/scss/pages/_template.scss
@@ -4,6 +4,7 @@
 $blue: #007eff;
 $dark: #222222;
 $white: #ffffff;
+$secondary-color: #bb953e;
 
 .template {
 	flex: 1;
